now obtain config fron config file
