# spBackend/api/controllers/serviceProvider.controller.js
@@ -7,20 +7,20 @@ const log = new Log('debug')
 const controller_name = '[serviceProvider Controller]'
 
 module.exports = {
-  newAlastriaID,
-  newSubjectCredential,
-  currentPublicKey
+  createAlastriaID,
+  addSubjectCredential,
+  getCurrentPublicKey
 }
 
-function newAlastriaID(req, res) {
+function createAlastriaID(req, res) {
   try {
-    log.debug(`${controller_name}${newAlastriaID.name} -----> IN ...`)
+    log.debug(`${controller_name}[${createAlastriaID.name}] -----> IN ...`)
     let params = req.swagger.params.body.value
-    log.debug(`${controller_name}${newAlastriaID.name} -----> Sending params: ${JSON.stringify(params)}`)
+    log.debug(`${controller_name}[${createAlastriaID.name}] -----> Sending params: ${JSON.stringify(params)}`)
     serviceProvidermodel.createAlastriaID(params)
     .then(alastriaID => {
       if (alastriaID) {
-        log.debug(`${controller_name}${newAlastriaID.name} -----> Successfully created new AlastriaId`)
+        log.debug(`${controller_name}[${createAlastriaID.name}] -----> Successfully created new AlastriaId`)
         res.status(200).send(alastriaID)
       }
       else {
@@ -35,19 +35,19 @@ function newAlastriaID(req, res) {
     })
   }
   catch(error) {
-    log.debug(`${controller_name}${newAlastriaID.name} -----> ${error}`)
+    log.debug(`${controller_name}[${createAlastriaID.name}] -----> ${error}`)
    }
 }
 
-function newSubjectCredential(req, res) {
+function addSubjectCredential(req, res) {
   try {
-    log.debug(`${controller_name}${newSubjectCredential.name} -----> IN ...`)
+    log.debug(`${controller_name}[${addSubjectCredential.name}] -----> IN ...`)
     let params = req.swagger.params.body.value
-    log.debug(`${controller_name}${newSubjectCredential.name} -----> Sending params: ${JSON.stringify(params)}`)
+    log.debug(`${controller_name}[${addSubjectCredential.name}] -----> Sending params: ${JSON.stringify(params)}`)
     serviceProvidermodel.addSubjectCredential(params)
     .then(credential => {
       if (credential) {
-        log.debug(`${controller_name}${newSubjectCredential.name} -----> Successfully created added credential`)
+        log.debug(`${controller_name}[${addSubjectCredential.name}] -----> Successfully created added credential`)
         res.status(200).send(credential)
       }
       else {
@@ -62,20 +62,20 @@ function newSubjectCredential(req, res) {
     })
   }
   catch(error) {
-    log.debug(`${controller_name}${newSubjectCredential.name} -----> ${error}`)
+    log.debug(`${controller_name}[${addSubjectCredential.name}] -----> ${error}`)
    }
 }
 
-function currentPublicKey(req, res) {
+function getCurrentPublicKey(req, res) {
   try {
-    log.debug(`${controller_name}${currentPublicKey.name} -----> IN ...`)
+    log.debug(`${controller_name}[${getCurrentPublicKey.name}] -----> IN ...`)
     console.log(req.swagger.params.alastriaId.value)
     let alastriaId = req.swagger.params.alastriaId.value
-    log.debug(`${controller_name}${currentPublicKey.name} -----> Sending params: ${JSON.stringify(alastriaId)}`)
-    serviceProvidermodel.getCurrentPublicKey(alastriaId)
+    log.debug(`${controller_name}[${getCurrentPublicKey.name}] -----> Sending params: ${JSON.stringify(alastriaId)}`)
+    serviceProvidermodel.getgetCurrentPublicKey(alastriaId)
     .then(credential => {
       if (credential) {
-        log.debug(`${controller_name}${currentPublicKey.name} -----> Successfully obtained ublic Key`)
+        log.debug(`${controller_name}[${getCurrentPublicKey.name}] -----> Successfully obtained ublic Key`)
         res.status(200).send(credential)
       }
       else {
@@ -90,6 +90,6 @@ function currentPublicKey(req, res) {
     })
   }
   catch(error) {
-    log.debug(`${controller_name}${currentPublicKey.name} -----> ${error}`)
+    log.debug(`${controller_name}[${getCurrentPublicKey.name}] -----> ${error}`)
    }
 }
